--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,16 +26,16 @@
 
 
 [[constraint]]
+  name = "github.com/go-sql-driver/mysql"
+  version = "1.4.1"
+
+[[constraint]]
   name = "github.com/jessevdk/go-flags"
   version = "1.4.0"
 
 [[constraint]]
   branch = "master"
   name = "github.com/mackerelio/checkers"
-
-[[constraint]]
-  name = "github.com/ziutek/mymysql"
-  version = "1.5.4"
 
 [prune]
   go-tests = true
